<resources>
    <string name="app_name">My App Portifolio</string>

    <string name="action_settings">Settings</string>

    <string name="nanodegree_title">My Nanodegree Apps!</string>

    <string name="spotify_button_name">Spotify Streamer</string>
    <string name="scores_button_name">Scores App</string>
    <string name="library_button_name">Library app</string>
    <string name="build_button_name">Build bigger</string>
    <string name="xyz_button_name">XYZ Reader</string>
    <string name="capstone_button_name">Capstone: My Own App</string>

    <string name="spotify_toast">This button will launch Spotify Streamer</string>
    <string name="scores_toast">This button will launch Scores App</string>
    <string name="library_toast">This button will launch Library App</string>
    <string name="build_toast">This button will launch Build Bigger</string>
    <string name="xyz_toast">This button will launch Xyz Reader</string>
    <string name="capstone_toast">This button will launch Capstone: My own app</string>
</resources>
