<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"
        android:text="@string/nanodegree_title"/>

    <Button
        android:id="@+id/spotify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/spotify_color"
        android:text="@string/spotify_button_name"
        android:layout_marginTop="24dp"/>

    <Button
        android:id="@+id/scores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/scores_color"
        android:text="@string/scores_button_name"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/library_color"
        android:text="@string/library_button_name"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/build"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/build_color"
        android:text="@string/build_button_name"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/xyz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/xyz_color"
        android:text="@string/xyz_button_name"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/capstone_color"
        android:text="@string/capstone_button_name"
        android:layout_marginTop="12dp"/>

</LinearLayout>
